# currency-converter-api

./: LICENSE.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy-azure-webapps.yml
scripts/: postcreate.sh  startup.sh
src/currency_converter_api/: main.py
src/currency_converter_api/config/: __init__.py  dependencies.py  settings.py
