[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "currency-converter-api"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Marciel Sousa", email = "4456790+marcielmj@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/marcielmj/currency-converter-api#readme"
Issues = "https://github.com/marcielmj/currency-converter-api/issues"
Source = "https://github.com/marcielmj/currency-converter-api"

[tool.hatch.version]
path = "src/currency_converter_api/__init__.py"

[tool.hatch.envs.default]
python = "3.12"

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]==7.4.3 ",
  "pytest==8.0.2",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy==1.8.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/currency_converter_api tests}"

[tool.coverage.run]
source_pkgs = ["currency_converter_api", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
currency_converter_api = ["src/currency_converter_api", "*/currency-converter-api/src/currency_converter_api"]
tests = ["tests", "*/currency-converter-api/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
select = ["E4", "E7", "E9", "F", "B", "UP", "C90", "I"]
